[workspace]
members = [
    "crates/domain",
    "crates/storage",
    "crates/web-app",
    "crates/web-app-seed",
]
exclude = [
    "third-party/seed"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Tobias Reiher <valens@ardeidae.de>"]
edition = "2024"

[workspace.dependencies]
assert_approx_eq = "1.1.0"
chrono = { version = "0.4.20", default-features = false }
log = { version = "0.4.26" }
plotters = { version = "0.3.2", default-features = false }
pretty_assertions = "1.4.0"
rstest = "0.24.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.12"
wasm-bindgen = "0.2.91"
web-sys = "0.3"
