[workspace]
members = [
    "crates/domain",
    "crates/storage",
    "crates/web-app",
    "crates/web-app-dioxus",
    "crates/web-app-seed",
]
exclude = [
    "third-party/seed"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Tobias Reiher <valens@ardeidae.de>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
assert_approx_eq = "1.1.0"
chrono = { version = "0.4.42", default-features = false }
log = { version = "0.4.28" }
plotters = { version = "0.3.7", default-features = false }
pretty_assertions = "1.4.1"
rstest = "0.26.1"
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.16"
uuid = { version = "1.3.0, <1.13.0", features = ["js", "v4", "serde"] }
wasm-bindgen = "0.2.101"
web-sys = "0.3"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
