[metadata]
name = valens
version = attr: valens.__version__
license = AGPL-3.0

[options]
packages = find:
python_requires = >=3.8
install_requires =
    flask
    matplotlib
    pandas
    pyarrow

[options.extras_require]
devel =
    black ==20.8b1
    flake8 >=3
    isort >=5
    mypy >=0.770
    pylint >=2.6.0
    pytest >=5
    pytest-cov >=2.10.0
    pytest-xdist >=1.32.0

[options.packages.find]
where=valens

[options.entry_points]
console_scripts =
    valens = valens.cli:main
