[metadata]
name = valens
description = An app for tracking your health and training progress.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tobias Reiher
author_email = valens@ardeidae.de
url = https://github.com/treiher/valens
license = AGPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Other/Nonlisted Topic

[options]
packages = find:
python_requires = >=3.8
install_requires =
    alembic >=1.6
    flask >=2.0.2
    matplotlib
    pandas
    sqlalchemy-repr >=0.0.2
    sqlalchemy[mypy] >=1.4.29

[options.extras_require]
devel =
    black ==22.3
    build >=0.7.0
    flake8 ==4.0
    isort ==5.10
    mypy ==0.961
    pylint ==2.13
    pytest >=5
    pytest-alembic >=0.3.1
    pytest-cov >=2.10.0
    pytest-xdist >=1.32.0
    setuptools_scm >=6.2

[options.packages.find]
where = valens

[options.package_data]
valens = *, */*, */*/*

[options.entry_points]
console_scripts =
    valens = valens.cli:main
