[package]
name = "valens-frontend"
version = "0.0.0"
authors = ["Tobias Reiher <valens@ardeidae.de>"]
edition = "2021"

[dependencies]
seed = "0.8"
serde = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "1", features = ["serde-1"] }
enclose = "1"
wasm-bindgen = "=0.2.74"
