[package]
name = "valens-frontend"
version = "0.0.0"
authors = ["Tobias Reiher <valens@ardeidae.de>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.20", features = ["serde", "wasmbind"] }
plotters = { version = "0.3.2", default_features = false, features = ["svg_backend", "datetime", "line_series", "histogram", "point_series"] }
seed = "0.8"
serde = "1.0"
serde_json = "1.0"
slice-group-by = "0.3"
wasm-bindgen = "=0.2.74"
web-sys = { version = "0.3", features = ["AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "OscillatorNode", "ScrollToOptions"] }
