[package]
name = "valens-frontend"
version = "0.0.0"
authors = ["Tobias Reiher <valens@ardeidae.de>"]
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.20", default-features = false, features = ["serde", "wasmbind"] }
gloo-console = "0.3.0"
gloo-net = { version = "0.6.0", default-features = false, features = ["http", "json"] }
gloo-storage = "0.3.0"
plotters = { version = "0.3.2", default-features = false, features = ["svg_backend", "datetime", "line_series", "histogram", "point_series", "area_series"] }
seed = { path = "../third-party/seed" }
serde = "1.0"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
slice-group-by = "0.3"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3", features = ["AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "MediaQueryList", "Notification", "NotificationOptions", "NotificationPermission", "OscillatorNode", "ScrollBehavior", "ScrollIntoViewOptions", "ScrollLogicalPosition", "ScrollToOptions", "ServiceWorker", "ServiceWorkerContainer", "Window"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
pretty_assertions = "1.4.0"
rstest = "0.24.0"
