[package]
name = "valens-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono = { workspace = true, default-features = false, features = ["clock", "serde"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
