[package]
name = "valens-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono = { workspace = true, default-features = false }
derive_more = { version = "2.0.1", features = ["as_ref", "deref", "display", "into"] }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
