[package]
name = "valens-web-app-dioxus"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
valens-domain = { path = "../domain" }
valens-web-app = { path = "../web-app" }
valens-storage = { path = "../storage" }

anyhow = { workspace = true }
base64 = "0.22.1"
chrono = { workspace = true, default-features = false }
dioxus = { version = "0.7.2", features = ["router", "web"] }
futures-util = "0.3"
gloo-timers = "0.3"
log = { workspace = true }
plotters = { workspace = true, default-features = false }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
web-sys = { workspace = true, features = ["AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "OscillatorNode"] }
